Added docker and api gateway

--- a/auth/Makefile
+++ b/auth/Makefile
@@ -1,7 +1,7 @@
 build:
 	go build github.com/daniilty/kanban-tt/auth/cmd/server
 build_docker:
-	docker build -t kanban-tt-auth:latest -f docker/Dockerfile .
+	docker build -t kanban-tt/auth-api:latest -f docker/Dockerfile .
 gen_swagger:
 	swagger generate spec -o ./api/openapi/swagger.json -m
 
