--- a/tasks/Makefile
+++ b/tasks/Makefile
@@ -1,2 +1,4 @@
 build:
 	go build github.com/daniilty/kanban-tt/tasks/cmd/server
+build_docker:
+	docker build -t kanban-tt/tasks-api:latest -f docker/Dockerfile .
