--- a/users/Makefile
+++ b/users/Makefile
@@ -1,3 +1,5 @@
 build:
 	go build github.com/daniilty/kanban-tt/users/cmd/server
+build_docker:
+	docker build -t kanban-tt/users-api:latest -f docker/Dockerfile .
 	
